$Id: History,v 1.35 2003-01-06 17:17:59 vnivanch Exp $
-------------------------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                      Category History file
                      ---------------------
This file should be used by G4 developers and category coordinators
to briefly summarize all major modifications introduced in the code
and keep track of all category-tags.
It DOES NOT substitute the  CVS log-message one should put at every
committal in the CVS repository !

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------

06 jan 03: V.Ivant (muons-V05-00-00)
- Update interfaces to STD classes in order to be ready to migrade 
  to "cut per region"

09 dec 02: V.Ivant (muons-V04-01-03)
-fix warning in G4MuIonisationSTD

04 dec 02: V.Ivant (muons-V04-01-02)
-fix problems in delta-electrons spectrum

28 oct 02: V.Ivant (muons-V04-01-01)
-fix compilation warnings for STD classes
     
16 oct 02: V.Ivant (muons-V04-01-00)
-redesign for a Model approach: files processNameSTD and processNameModel
     
29 may 02: mma (muons-V04-00-02)
- V.Ivanchenko G4VMuEnergyLoss - bug fixed in N of subcutoff delta
 
27 feb 02: mma (muons-V04-00-01)
- V.Ivanchenko G4VMuEnergyLoss - PostStep->PreStep for touchebleHandler 
     
10 fev 02: mma (muons-V04-00-00)
- G4VMuEnergyLoss : error in SetMindeltaCutInRange, was set in energy !
         
12 nov 01: mma (muons-V03-02-10)
- ParticleMass and Charge: local variables
- merge 09 + 06a
     
07 nov 01: mma (muons-V03-02-09)
- correction(Tmax+xsection computation) L.Urban
    
28 oct 01: mma (muons-V03-02-08)
- all static functions no more inlined
     
24 oct 01: mma (muons-V03-02-07)