@@ -1,4 +1,4 @@
-$Id: History,v 1.35 2003-01-06 17:17:59 vnivanch Exp $
+$Id: History,v 1.36 2003-01-08 14:43:18 maire Exp $
 -------------------------------------------------------------------
 
      =========================================================
@@ -16,6 +16,8 @@ committal in the CVS repository !
      ----------------------------------------------------------
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
+08 jan 03: mma (muons-V05-00-01)
+-MuPairProduction::PostStepDoIt : remove 'tracking cut' of muon
 
 06 jan 03: V.Ivant (muons-V05-00-00)
 - Update interfaces to STD classes in order to be ready to migrade 
